# tinySTL

./: CMakeLists.txt  main.cpp  try.py
include/: myfunc.hpp
src/: CMakeLists.txt
src/add/: CMakeLists.txt  add.cpp
src/sub/: CMakeLists.txt  sub.cpp
test/: CMakeLists.txt  test.cpp
